fix navbar alignment for never expand situations

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -98,6 +98,9 @@
 // on the `.navbar` parent.
 .navbar-collapse {
   flex-basis: 100%;
+  // For always expanded or extra full navbars, ensure content aligns itself
+  // properly vertically. Can be easily overridden with flex utilities.
+  align-items: center;
 }
 
 // Button for toggling the navbar when in its collapsed state
